Squash all the bugs

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -363,6 +363,9 @@ a
             background: url('/assets/comment.png') no-repeat 5px
           .activity-4
             background: url('/assets/like.png') no-repeat 5px 3px
+          .stars
+            background: url('/assets/small.png') no-repeat
+            padding-left: 17px
           .time
             margin-right: 5px 
             opacity: 0.3
